<resources>
    <string name="app_name">Kotlin_Coroutines_Demo</string>
    <string name="single_network_call">Single Network Call</string>
    <string name="series_network_calls">Series Network Call</string>
    <string name="parallel_network_calls">Parallel Network Call</string>
    <string name="room_database">Room Database</string>
    <string name="timeout">TimeOut</string>
    <string name="try_catch_error">Try Catch Error</string>
    <string name="exception_handler">Exception Handler</string>
    <string name="ignore_error_and_continue">Ignore Error and Continue</string>
    <string name="long_running_task">Long Running Task</string>
    <string name="two_long_running_tasks">Two Long Running Task</string>
</resources>