<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/singleNetworkCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_network_call"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/seriesNetworkCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series_network_calls"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/parallelNetworkCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parallel_network_calls"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/roomDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_database"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeout"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/tryCatchError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_catch_error"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/exceptionHandler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exception_handler"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ignoreErrorANdContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ignore_error_and_continue"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/longRunningTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_running_task"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/twoLongRunningTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_long_running_tasks"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>